<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activitys.ajustes.AjustesActivity">



    <android.support.v7.widget.AppCompatImageView
        android:src="@drawable/ic_ajustes"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_ajustes_materias_alta"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:text="@string/Materias_alta"
        android:textColor="#fff"
        android:background="@drawable/btn"
        android:textAllCaps="false"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_ajustes_materias_modificar"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:text="@string/Materias_modificar"
        android:textColor="#fff"
        android:background="@drawable/btn"
        android:textAllCaps="false"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_ajustes_precios"
        android:layout_margin="10dp"
        android:background="@drawable/btn"
        android:textAllCaps="false"
        android:text="@string/precios"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
