<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Paquetes"
        android:textSize="20sp"
        android:textColor="#0e0d0d"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_margin="5dp"
        android:background="#0e0d0d"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:text="@string/Primaria"
            android:textColor="#0e0d0d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="#0e0d0d"
            android:id="@+id/et_precio_primaria_paquete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:text="@string/Secundaria"
            android:textColor="#0e0d0d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="#0e0d0d"
            android:id="@+id/et_precio_secundaria_paquete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:text="@string/Preparatoria"
            android:textColor="#0e0d0d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="#0e0d0d"
            android:id="@+id/et_precio_preparatoria_paquete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:text="@string/Universidad"
            android:textColor="#0e0d0d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="#0e0d0d"
            android:id="@+id/et_precio_universidad_paquete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:text="Clases por hora"
        android:textSize="20sp"
        android:textColor="#0e0d0d"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_margin="5dp"
        android:background="#0e0d0d"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:text="@string/Primaria"
            android:textColor="#0e0d0d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="#0e0d0d"
            android:id="@+id/et_precio_primaria_hora"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:text="@string/Secundaria"
            android:textColor="#0e0d0d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="#0e0d0d"
            android:id="@+id/et_precio_secundaria_hora"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:text="@string/Preparatoria"
            android:textColor="#0e0d0d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_precio_preparatoria_hora"
            android:textColor="#0e0d0d"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:text="@string/Universidad"
            android:textColor="#0e0d0d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_precio_universidad_hora"
            android:textColor="#0e0d0d"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:textColor="#fff"
        android:text="Aceptar"
        android:id="@+id/btn_ajustar_precios"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>